<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimelapseActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/normalModeLine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UseCompoundDrawables" >

                <ImageView
                    android:id="@+id/beginImageView"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/capture_begin_time"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/beginTextView"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_alignBottom="@+id/beginImageView"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/beginImageView"
                    android:text="@string/capture_begin_time"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/beginValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/beginImageView"
                    android:text="@string/capture_begin_time_default"
                    android:textSize="32sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UseCompoundDrawables" >

                <ImageView
                    android:id="@+id/durationImageView"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/capture_duration"
                    android:src="@drawable/ic_duration" />

                <TextView
                    android:id="@+id/durationTextView"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_alignBottom="@+id/durationImageView"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/durationImageView"
                    android:text="@string/capture_duration"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/durationValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/durationImageView"
                    android:text="@string/capture_duration_default"
                    android:textSize="32sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UseCompoundDrawables" >

                <ImageView
                    android:id="@+id/endImageView"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/capture_end_time"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/endTextView"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_alignBottom="@+id/endImageView"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/endImageView"
                    android:text="@string/capture_end_time"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/endValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/endImageView"
                    android:text="@string/capture_end_time_default"
                    android:textSize="32sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bothModesLine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <RelativeLayout
                android:id="@+id/startTimeRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UseCompoundDrawables" >

                <ImageView
                    android:id="@+id/beginUnlimitedModeImageView"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/capture_begin_time"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/beginUnlimitedModeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_alignBottom="@+id/beginUnlimitedModeImageView"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/beginUnlimitedModeImageView"
                    android:text="@string/capture_begin_time"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/beginUnlimitedModeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/beginUnlimitedModeImageView"
                    android:text="@string/capture_begin_time_default"
                    android:textSize="32sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UseCompoundDrawables" >

                <ImageView
                    android:id="@+id/framesCountImageView"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/capture_frames_count"
                    android:src="@drawable/ic_frames_count_down" />

                <TextView
                    android:id="@+id/framesCountTextView"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_alignBottom="@+id/framesCountImageView"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/framesCountImageView"
                    android:text="@string/capture_frames_count"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

				<LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_below="@+id/framesCountImageView"
				    android:baselineAligned="false"
				    android:gravity="center_vertical"
				    android:orientation="horizontal" >
		            
	                <TextView
	                    android:id="@+id/framesCountValue"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/capture_frames_count_default"
	                    android:textSize="32sp" />
	
	                <ProgressBar
	                    android:id="@+id/takingPictureProgressBar"
	                    android:layout_width="32dp"
	                    android:layout_height="32dp"
	                    android:indeterminate="true" />
	                
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UseCompoundDrawables" >

                <ImageView
                    android:id="@+id/batteryImageView"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/capture_battery_life"
                    android:src="@drawable/ic_battery_life" />

                <TextView
                    android:id="@+id/batteryTextView"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_alignBottom="@+id/batteryImageView"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/batteryImageView"
                    android:text="@string/capture_battery_life"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/batteryValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/batteryImageView"
                    android:text="@string/capture_battery_life_default"
                    android:textSize="32sp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/normalModeLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:ignore="UseCompoundDrawables" >

            <ImageView
                android:id="@+id/progressImageView"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/capture_progress"
                android:src="@drawable/ic_progress" />

            <TextView
                android:id="@+id/progressTextView"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:layout_alignBottom="@+id/progressImageView"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@+id/progressImageView"
                android:text="@string/capture_progress"
                android:textAllCaps="true"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/progressImageView"
                android:max="10"
                android:progress="8" />

            <TextView
                android:id="@+id/progressValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/progressTextView"
                android:text="@string/capture_progress_default" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/nextImageView"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/capture_progress"
                    android:src="@drawable/ic_progress" />

                <TextView
                    android:id="@+id/nextTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:text="@string/capture_next_picture"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/nextValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capture_next_picture_default"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/nextPictureProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="8" />

        </LinearLayout>

        <ImageView
            android:id="@+id/lastFramePreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/capture_last_image_preview" />
    </LinearLayout>

    <TextView
        android:id="@+id/timelapseCountdownBeforeStartText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFf3f3f3"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/capture_countdown_before_start_message"
        android:visibility="gone" >
    </TextView>

</RelativeLayout>